--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "3.11"
 beautifulsoup4 = "^4.12.2"
 requests = "^2.31.0"
 selenium = "^4.12.0"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
