--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = ""
 authors = ["stupidcabbage <vanya@gutche.ru>"]
 license = "MIT License"
 readme = "README.md"
+packages = [{include = "diary"}]
 
 [tool.poetry.dependencies]
 python = "3.11"
