--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ beautifulsoup4 = "^4.12.2"
 requests = "^2.31.0"
 selenium = "^4.12.0"
 python-dotenv = "^1.0.0"
+aiohttp = "^3.8.5"
+pydantic = "^2.4.2"
 
 
 [build-system]
