--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ aiogram = "^3.1.1"
 jinja2 = "^3.1.2"
 
 
+[tool.poetry.group.dev.dependencies]
+isort = "^5.12.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
