--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dateparser = "^1.1.8"
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
+httplib2 = "^0.22.0"
 
 [build-system]
 requires = ["poetry-core"]
