--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dateparser = "^1.1.8"
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
 httplib2 = "^0.22.0"
+telebot = "^0.0.5"
 
 [build-system]
 requires = ["poetry-core"]
