--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ lxml = "^4.9.3"
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
 httplib2 = "^0.22.0"
+telebot = "^0.0.5"
 
 [build-system]
 requires = ["poetry-core"]
