--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ aiogram = "^3.1.1"
 jinja2 = "^3.1.2"
 dateparser = "^1.1.8"
 lxml = "^4.9.3"
+emoji = "^2.8.0"
 
 
 [tool.poetry.group.dev.dependencies]
