--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ jinja2 = "^3.1.2"
 dateparser = "^1.1.8"
 lxml = "^4.9.3"
 emoji = "^2.8.0"
+sqlalchemy = "^2.0.22"
+alembic = "^1.12.0"
 
 
 [tool.poetry.group.dev.dependencies]
