--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ lxml = "^4.9.3"
 emoji = "^2.8.0"
 sqlalchemy = "^2.0.22"
 alembic = "^1.12.0"
+aiosqlite = "^0.19.0"
 
 
 [tool.poetry.group.dev.dependencies]
