--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ emoji = "^2.8.0"
 sqlalchemy = "^2.0.22"
 alembic = "^1.12.0"
 aiosqlite = "^0.19.0"
+loguru = "^0.7.2"
 
 
 [tool.poetry.group.dev.dependencies]
