--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ loguru = "^0.7.2"
 isort = "^5.12.0"
 httplib2 = "^0.22.0"
 telebot = "^0.0.5"
+lxml = "^4.9.3"
 
 [build-system]
 requires = ["poetry-core"]
