--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ sqlalchemy = "^2.0.22"
 alembic = "^1.12.0"
 aiosqlite = "^0.19.0"
 loguru = "^0.7.2"
+sentry-sdk = "^1.34.0"
 
 
 [tool.poetry.group.dev.dependencies]
