--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ isort = "^5.12.0"
 httplib2 = "^0.22.0"
 telebot = "^0.0.5"
 lxml = "^4.9.3"
+ruff = "^0.1.6"
 
 [build-system]
 requires = ["poetry-core"]
