--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,37 +1,30 @@
 [tool.poetry]
-name = "deeduorb"
+name = "edu-orb-ru"
 version = "0.1.0"
 description = ""
 authors = ["stupidcabbage <vanya@gutche.ru>"]
-license = "MIT License"
 readme = "README.md"
-packages = [{include = "diary"}]
+packages = [{include = "edu_orb"}]
 
 [tool.poetry.dependencies]
-python = "3.11"
-beautifulsoup4 = "^4.12.2"
+python = "^3.11"
+beautifulsoup4 = "^4.12.3"
+jinja2 = "^3.1.3"
+selenium = "^4.17.2"
 requests = "^2.31.0"
-selenium = "^4.12.0"
-python-dotenv = "^1.0.0"
-aiohttp = "^3.8.5"
-aiogram = "^3.1.1"
-jinja2 = "^3.1.2"
-dateparser = "^1.1.8"
-lxml = "^4.9.3"
-emoji = "^2.8.0"
-sqlalchemy = "^2.0.22"
-alembic = "^1.12.0"
+python-dotenv = "^1.0.1"
+aiohttp = "^3.9.3"
+aiogram = "^3.3.0"
+dateparser = "^1.2.0"
+lxml = "^5.1.0"
+emoji = "^2.10.1"
+sqlalchemy = "^2.0.27"
+alembic = "^1.13.1"
 aiosqlite = "^0.19.0"
 loguru = "^0.7.2"
-sentry-sdk = "^1.34.0"
-
-
-[tool.poetry.group.dev.dependencies]
-isort = "^5.12.0"
-httplib2 = "^0.22.0"
+sentry-sdk = "^1.40.4"
 telebot = "^0.0.5"
-lxml = "^4.9.3"
-ruff = "^0.1.6"
+
 
 [build-system]
 requires = ["poetry-core"]
